--- a/style.css
+++ b/style.css
@@ -204,12 +204,17 @@ li {
 
 
 #h2_classificada {
-    display: flex;
-    flex-direction: column;
+    display: block;
+    flex-direction:column;
     width: 100vw;
     height: 100vh;
+    margin:5px;
+    margin-bottom: 30px;
+    justify-content: center;
+    justify-items: center;
     align-items: center;
-    padding: 20px;
+    padding-top: 20 px;
+    padding-bottom: 50px;
 
     color: var(--white);
     font-size: xx-large;
@@ -247,7 +252,7 @@ li {
 
 .adolescente {
     width: 4rem;
-    height: 4remd;
+    height: 4rem;
 
 }
 
@@ -268,4 +273,33 @@ li {
     justify-content:center;
     align-items: center;
     margin-bottom: 100px;
+    font-size:small;
+}
+
+
+
+
+.container7 {
+    text-align: center;
+    
+}
+
+.logo {
+    width: 5%;
+    height: 5%;
+    display: inline-block;
+    margin: auto;
+}
+
+.item2 {
+    margin-top: 40px;
+}
+
+.olclassi {
+    display: block;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
